# libbsarchpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  TODO.md  vcpkg.json
.github/workflows/: build.yml
cmake/: config.cmake.in
include/libbsarchpp/: Bsa.h  constants.h  dllexport.h  enums.h  hash.h  types.h
include/libbsarchpp/utils/: timer.h  utils.h
src/: Bsa.cpp  hash.cpp  md5.cpp  md5.h  pch.h  types.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt  settings.h.in  tests.cpp
tests/checksums/: fnv.h  fnv_compressed.h  fnv_shared.h  fo3.h  fo3_compressed.h  fo3_shared.h  fo4.h  fo4_compressed.h  fo4_shared.h  fo4vr.h  fo4vr_compressed.h  fo4vr_shared.h  sf.h  sf_compressed.h  sf_shared.h  sha256sums.h  skyrimvr.h  skyrimvr_compressed.h  skyrimvr_shared.h  sse.h  sse_compressed.h  sse_shared.h  tes3.h  tes3_compressed.h  tes3_shared.h  tes4.h  tes4_compressed.h  tes4_shared.h  tes5.h  tes5_compressed.h  tes5_shared.h
tests/checksums/original/: README  fnv.sha256  fo3.sha256  fo4.sha256  fo4vr.sha256  fo76.sha256  sf.sha256  skyrimvr.sha256  sse.sha256  tes3.sha256  tes4.sha256  tes5.sha256
tests/files/: fo3.bsa  fo4.ba2  sf.ba2  sse.bsa  tes3.bsa  tes4.bsa
tests/utils/: create_header.sh  create_test_suite.sh  xedit_repack.sh
